레이아웃 첫 세팅

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -10,7 +10,9 @@
 @value makerWheat: wheat;
 
 @value backDark:#151521;
+@value backWhite:#f5f8fa;
 @value boxDark:#1E1E2D;
+@value boxDark_2:#1a1a27;
 
 @value inputDark:#1B1B29;
 @value textDark:#92929F;
