--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,25 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#__next{
+    display: flex;
+}
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    flex:1;
+}
+.flex-column > section{
+    flex:1 0 auto;
+}
+.flex-row{
+    display: flex;
+    flex-direction: row;
+    flex:1;
+}
+.max-height{
+    max-height: 100vh;
+    overflow-y: auto;
+}
