--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/*@import "~antd/dist/antd.css";*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 *{
     box-sizing: border-box;
@@ -13,6 +12,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     height: 100%;
+}
+h1,h2,h3,h4,h5,h6{
+    margin: inherit;
+    color: inherit;
 }
 
 code {
