--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -17,5 +17,6 @@
 @value inputDark:#1B1B29;
 @value textDark:#92929F;
 @value buttonBlue:#009ef7;
+@value textBlue:#009ef7;
 
 @value darkBorder:#2b2b40;
