--- a/src/components/webmaster/pannels/leftPanels/leftPanel.module.css
+++ b/src/components/webmaster/pannels/leftPanels/leftPanel.module.css
@@ -24,6 +24,16 @@
     flex-direction: column;
     gap: 1rem;
     flex:1 0 auto;
+    align-items: center;
+}
+
+.menuWrap ul,
+.menuWrap ul li{
+    border:0;
+    border-radius: defaultRadius;
+}
+.menuWrap div{
+    cursor: pointer;
 }
 
 .setupWrap{
@@ -31,4 +41,5 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
 }
