--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@ h1,h2,h3,h4,h5,h6{
     margin: inherit;
     color: inherit;
 }
+ul{
+    margin: 0;
+    padding: 0;
+}
+li{
+    list-style-type: none;
+}
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
