--- a/src/common/App.css
+++ b/src/common/App.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6{
     margin: inherit;
     color: inherit;
 }
-ul{
+p,ul{
     margin: 0;
     padding: 0;
 }
@@ -28,6 +28,10 @@ li{
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button{
+    cursor: pointer;
 }
 
 #__next{
