--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -17,6 +17,11 @@
 @value inputDark:#1B1B29;
 @value textDark:#92929F;
 @value buttonBlue:#009ef7;
+@value buttonMint:#00adb5;
+@value buttonRed:#ff6347;
+@value buttonSky:#6495ed;
 @value textBlue:#009ef7;
+@value textGray:#6d6d80;
+@value textRed:#b93993;
 
 @value darkBorder:#2b2b40;
